--- a/MokaPos/Storyboards/Detail.storyboard
+++ b/MokaPos/Storyboards/Detail.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item List View Controller-->
         <scene sceneID="Pjd-76-Ey4">
             <objects>
-                <viewController id="ITm-r2-ZuA" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemListViewController" id="ITm-r2-ZuA" customClass="ItemListViewController" customModule="MokaPos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RbP-KX-mlw">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="-636" y="-384"/>
         </scene>
-        <!--View Controller-->
+        <!--Discount List View Controller-->
         <scene sceneID="434-rg-f6Q">
             <objects>
-                <viewController id="nN2-UQ-FJu" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DiscountListViewController" id="nN2-UQ-FJu" customClass="DiscountListViewController" customModule="MokaPos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2eJ-Z5-vfG">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
