added some assets added core data model classes added core data handler methods to save, retrieve data made some changes to utils class and api manager class

--- a/MokaPos/Storyboards/Base.lproj/Main.storyboard
+++ b/MokaPos/Storyboards/Base.lproj/Main.storyboard
@@ -26,35 +26,113 @@
             </objects>
             <point key="canvasLocation" x="967" y="134"/>
         </scene>
-        <!--View Controller-->
+        <!--Options List View Controller-->
         <scene sceneID="KMz-Ph-r4V">
             <objects>
-                <viewController id="pe5-GP-sUg" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="OptionsListViewController" id="pe5-GP-sUg" customClass="OptionsListViewController" customModule="MokaPos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XaQ-l0-bCd">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rfa-JB-GQz">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="pe5-GP-sUg" id="PBe-Qf-saP"/>
+                                    <outlet property="delegate" destination="pe5-GP-sUg" id="Mk8-If-VN1"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rfa-JB-GQz" firstAttribute="leading" secondItem="7Pb-5U-M1v" secondAttribute="leading" id="HJM-MK-g4t"/>
+                            <constraint firstItem="rfa-JB-GQz" firstAttribute="top" secondItem="7Pb-5U-M1v" secondAttribute="top" id="crn-BR-gc0"/>
+                            <constraint firstItem="7Pb-5U-M1v" firstAttribute="trailing" secondItem="rfa-JB-GQz" secondAttribute="trailing" id="ev3-Ga-vjD"/>
+                            <constraint firstItem="7Pb-5U-M1v" firstAttribute="bottom" secondItem="rfa-JB-GQz" secondAttribute="bottom" id="yIh-Jl-Tjs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="7Pb-5U-M1v"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="rfa-JB-GQz" id="0oi-Vi-ZgG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QbN-EJ-73N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1728" y="-229"/>
         </scene>
-        <!--View Controller-->
+        <!--Cart View Controller-->
         <scene sceneID="Rqm-08-uPw">
             <objects>
-                <viewController id="8Ba-VQ-0dm" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CartViewController" id="8Ba-VQ-0dm" customClass="CartViewController" customModule="MokaPos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ITv-6M-maU">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PKf-Qr-jwX">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CartCellIdentifier" rowHeight="55" id="emS-Dl-GE8">
+                                        <rect key="frame" x="0.0" y="28" width="1024" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="emS-Dl-GE8" id="Kne-zj-3nv">
+                                            <rect key="frame" x="0.0" y="0.0" width="1024" height="54.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0I-co-S31">
+                                                    <rect key="frame" x="15" y="17" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rsS-PP-x31">
+                                                    <rect key="frame" x="491" y="17" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6RP-bP-bxj">
+                                                    <rect key="frame" x="541" y="17" width="468" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="6RP-bP-bxj" firstAttribute="leading" relation="lessThanOrEqual" secondItem="rsS-PP-x31" secondAttribute="trailing" constant="8" symbolic="YES" id="1ce-vz-PIH"/>
+                                                <constraint firstItem="rsS-PP-x31" firstAttribute="centerX" secondItem="Kne-zj-3nv" secondAttribute="centerX" id="NXT-nG-ynw"/>
+                                                <constraint firstItem="6RP-bP-bxj" firstAttribute="centerY" secondItem="Kne-zj-3nv" secondAttribute="centerY" id="T5H-R5-j12"/>
+                                                <constraint firstItem="rsS-PP-x31" firstAttribute="centerY" secondItem="Kne-zj-3nv" secondAttribute="centerY" id="Vmv-9w-vpF"/>
+                                                <constraint firstItem="T0I-co-S31" firstAttribute="leading" secondItem="Kne-zj-3nv" secondAttribute="leading" constant="15" id="icj-bk-CeU"/>
+                                                <constraint firstAttribute="trailing" secondItem="6RP-bP-bxj" secondAttribute="trailing" constant="15" id="yWh-nI-1Fu"/>
+                                                <constraint firstItem="T0I-co-S31" firstAttribute="centerY" secondItem="Kne-zj-3nv" secondAttribute="centerY" id="zOr-Ww-H3M"/>
+                                                <constraint firstItem="rsS-PP-x31" firstAttribute="leading" relation="lessThanOrEqual" secondItem="T0I-co-S31" secondAttribute="trailing" constant="434" id="zRP-Ek-kJR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="8Ba-VQ-0dm" id="yVH-o8-K03"/>
+                                    <outlet property="delegate" destination="8Ba-VQ-0dm" id="w3q-6V-uQs"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="mgA-L7-58j" firstAttribute="bottom" secondItem="PKf-Qr-jwX" secondAttribute="bottom" id="atH-av-caX"/>
+                            <constraint firstItem="PKf-Qr-jwX" firstAttribute="leading" secondItem="mgA-L7-58j" secondAttribute="leading" id="bx1-kC-56I"/>
+                            <constraint firstItem="mgA-L7-58j" firstAttribute="trailing" secondItem="PKf-Qr-jwX" secondAttribute="trailing" id="rQ5-sK-N5r"/>
+                            <constraint firstItem="PKf-Qr-jwX" firstAttribute="top" secondItem="mgA-L7-58j" secondAttribute="top" id="x9o-VV-RUn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="mgA-L7-58j"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="PKf-Qr-jwX" id="w2O-gx-kfW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fDo-Um-5Y0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1727" y="497"/>
+            <point key="canvasLocation" x="1726.7578125" y="496.875"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="W2T-XQ-Mbj">
